# chromium-updater-mac

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: setup.sh
src/: chromium-updater.py  chromium_updater.py  one.superbox.chromium.updater.plist
tests/: conftest.py  test_chromium_updater.py
