[project]
name = "chromium_updater_mac"
version = "1.0.0"
requires-python = ">= 3.9"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "coverage>=7.10.7",
    "mypy>=1.19.1",
    "pip-audit>=2.9.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "rumdl>=0.1.19",
    "setuptools<=80.10.2",
    "yamllint>=1.37.1",
]

[tool.black]
line-length = 120

[tool.mypy]
strict = true
junit_xml = "reports/mypy.xml"
untyped_calls_exclude = "aioresponses"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "I001",
    "S101",
    "S603",
    "T201",
]

[tool.rumdl]
line-length = 120
disable = [
]
respect-gitignore = true

[tool.rumdl.MD013]
code_blocks = false
tables = false

[tool.rumdl.MD024]
siblings_only = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(levelname)-8s | %(asctime)s: %(message)s"
# https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
addopts = "--cov=src --cov-report=term-missing --cov-report=xml:reports/coverage.xml --color=yes --exitfirst --failed-first --strict-config --strict-markers --junitxml=reports/pytest.xml"

[tool.coverage.run] # https://coverage.readthedocs.io/en/latest/config.html#run
branch = false

[tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
fail_under = 100
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
